[package]
name = "accord"
description = "A Rust implementation of the Accord consensus protocol"
version = "0.1.0"
edition = "2024"
authors = ["Erik Grinaker <erik@grinaker.org>"]
license = "Apache-2.0"
repository = "https://github.com/erikgrinaker/rust-accord"
keywords = ["accord", "consensus", "distributed-systems"]
categories = ["algorithms", "concurrency"]

[lints.clippy]
pedantic = "deny"
cargo = "deny"

[dependencies]

[dev-dependencies]
itertools = "0.14"
rand = "0.8"
