[package]
name = "accord"
description = "A Rust implementation of the Accord consensus protocol"
version = "0.1.0"
edition = "2024"
authors = ["Erik Grinaker <erik@grinaker.org>"]
license = "Apache-2.0"
repository = "https://github.com/erikgrinaker/rust-accord"
keywords = ["accord", "consensus", "distributed-systems"]
categories = ["algorithms", "concurrency"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
must_use_candidate = "allow"
return_self_not_must_use = "allow"

[dependencies]
educe = "0.6"
thiserror = "2.0"

[dev-dependencies]
itertools = "0.14"
rand = "0.8"
